Trying new plugin to allow multiple pagnations

--- a/photos/index.html
+++ b/photos/index.html
@@ -3,6 +3,7 @@ layout: page
 title: "Photo Portfolio"
 description: "This is what I do."
 header-img: "img/photo-bg.jpg"
+category: photos
 ---
 
 {% for post in paginator.posts %}
