Still trying new things for cat

--- a/photos/index.html
+++ b/photos/index.html
@@ -1,5 +1,5 @@
 ---
-layout: page
+layout: category_index
 title: "Photo Portfolio"
 description: "This is what I do."
 header-img: "img/photo-bg.jpg"
