trying non plugin, other changes

--- a/photos/index.html
+++ b/photos/index.html
@@ -1,9 +1,8 @@
 ---
-layout: category_index
+layout: photos_index
 title: "Photo Portfolio"
 description: "This is what I do."
 header-img: "img/photo-bg.jpg"
-category: photos
 ---
 
 {% for post in paginator.posts %}
