--- a/projects/index.html
+++ b/projects/index.html
@@ -1,9 +1,8 @@
 ---
-layout: page
+layout: projects_index
 title: "Projects Portfolio"
 description: "This is what I do."
 header-img: "img/proj-bg.jpg"
-category: projects
 ---
 
 {% for post in paginator.posts %}
