--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 ---
 layout: page
-description: "This is what I do."
+description: "A showcase of my skills relating to photography and engineering"
 ---
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
+<h2 class="section-heading">Introduction</h2>
+
+<p>Seems you have stumbled upon the blog of Himanshu Dedge. Himanshu is a second year engineering student at the Georgia Institute of Technology (Geogria Tech). </p>
+
+<h2 class="section-heading"></h2>
+<p>Photography, Robotics. My three defining aspects. I am going to borrow a conecept of "Core Memories" from the 2015 Disney movie, Inside Out. My first defining core memory which sparked my interest in roboitcs and engineering would be the week long summer camp I attended my summer after 8th grade. Even before attending this camp I had been interested in mechinical and electrical design (which is why most of my R/C toys didn't last more than a month before being taken apart by me). But the summer camp helped me realize that I could actually continue doing what I enjoyed for the rest of my life. The professor who was in charge of the camp reccomended I join the robotics team in my high school, which I did and I was hooked right away. Freshman year on the team I learned so much about mechnical design, machining and CAD. By sophomore year I was so dedicated to the team, I spent 240 hours in the shop working during our 6 week build season, and this was during the school year!</p>
 
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum molestiae debitis nobis, quod sapiente qui voluptatum, placeat magni repudiandae accusantium fugit quas labore non rerum possimus, corrupti enim modi! Et.</p>
