--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@ layout: page
 description: "A showcase of my skills relating to photography and engineering"
 ---
 
+<h2 class="section-heading">Website Under Maintenance</h2>
+<p>The blog posts are in the process of being updated. Please check back soon for the final site.</p>
 <h2 class="section-heading">Introduction</h2>
 
-<p>I am a second year mechanical engineering student at the Georgia Insititue of Technology. In high school two activites ,engineering (primarialy robotics) and photography, grew into key aspects of my life. The <a href="firstus.org">FIRST Robotics</a>team at my high school allowed me to dive into engineering head first. I explored the electrical and computer science aspect of robotics before settlling on the mechanical part. In my four years on the team I developed my CAD, machining and mechanical design skills.    </p>
+<p>I am a second year mechanical engineering student at the Georgia Insititue of Technology. In high school two activites ,engineering (primarialy robotics) and photography, grew into key aspects of my life. The <a target="_blank" href="http://www.usfirst.org/">FIRST Robotics</a> team at my high school allowed me to dive into engineering head first. I explored the electrical and computer science aspect of robotics before settlling on the mechanical part. In my four years on the team I developed my CAD, machining and mechanical design skills.    </p>
 
 <!-- <p>Seems you have stumbled upon the blog of Himanshu Dedge. I am a second year mechanical engineering student at the Georgia Institute of Technology (Geogria Tech).  </p> -->
 
@@ -16,6 +18,4 @@ description: "A showcase of my skills relating to photography and engineering"
 <h2 class="section-heading">Une petite histoire de moi</h2>
 <p>Photography, Robotics. My three defining aspects. I am going to borrow a conecept of "Core Memories" from the 2015 Disney movie, Inside Out. My first defining core memory which sparked my interest in roboitcs and engineering would be the week long summer camp I attended my summer after 8th grade. Even before attending this camp I had been interested in mechinical and electrical design (which is why most of my R/C toys didn't last more than a month before being taken apart by me). But the summer camp helped me realize that I could actually continue doing what I enjoyed for the rest of my life. The professor who was in charge of the camp reccomended I join the robotics team in my high school, which I did and I was hooked right away. Freshman year on the team I learned so much about mechnical design, machining and CAD. By sophomore year I was so dedicated to the team, I spent 240 hours in the shop working during our 6 week build season, and this was during the school year! Throughout high school I continued to foster my interest in engineering. During my senior year, I actually attended WPI as a full time college freshman and took many robotics, CAD and machining classes.</p>
 <p>During high school I did not have access to a lot of equipment to work on personal engineeringish projects. Most of my engineering experience came from the work I did on my robotics team and the projects I did for my engineering classes at WPI and in high school. Upon arriving at Georgia Tech, this all changed, thanks to the the <a target ="_blank" href="http://inventionstudio.gatech.edu/">Invention Studio</a>. </p>  -->
-
-
 
