new index and no contact

--- a/index.html
+++ b/index.html
@@ -3,13 +3,28 @@ layout: page
 description: "A showcase of my skills relating to photography and engineering"
 ---
 
-<h2 class="section-heading">Website Under Maintenance</h2>
+<h2 class="section-heading">******Website Under Maintenance******</h2>
 <p>The blog posts are in the process of being updated. Please check back soon for the final site.</p>
+<h2>***********************************************</h2>
+
+
+
+<a target="_blank" href="{{ site.baseurl }}/img/IMG_3252.png">
+    <img src="{{ site.baseurl }}/img/IMG_3252.png" alt="Oh, shoot! Look's like you're missing out on the photo:(">
+</a>
+<span class="caption text-muted">Me at Ecomusée des Mines de Fer de Lorraine in France.</span>
+
 <h2 class="section-heading">Introduction</h2>
 
-<p>I am a second year mechanical engineering student at the Georgia Insititue of Technology. In high school two activites ,engineering (primarialy robotics) and photography, grew into key aspects of my life. The <a target="_blank" href="http://www.usfirst.org/">FIRST Robotics</a> team at my high school allowed me to dive into engineering head first. I explored the electrical and computer science aspect of robotics before settlling on the mechanical part. In my four years on the team I developed my CAD, machining and mechanical design skills.    </p>
+<p>I am a second year mechanical engineering student at the Georgia Insititue of Technology. I created this website to showcase my two passions, photography and engineering. </p>
+<p>I was introduced to engineering freshman year of high school when I joined the <a target="_blank" href="http://www.usfirst.org/">FIRST Robotics</a> competiton team at the school. At Georgia Tech I am part of RoboJackets (the school's robotics club which is comprised of five competition teams) and I am also a Prototyping Instructor at the Georgia Tech Invention Studio (a student run maker-space). </p>
+<p>My interest in photography didn't become evident to me until very recently. Junior year of high school I just began taking more and more photos with the famly DSLR. My senior year of high school I took senior portraits for 20 of my classmates and I even did a shoot for an oboist who used the pictures for the fliers for her show! At college I wanted to continue practicing photography, so I started a photojournalistic blog called <a href="https://www.facebook.com/humansofgeorgiatech/">Humans of Georgia Tech</a>. I am the photogrpaher for this blog and I take portraits of the people on campus and share something about them.</p>
 
-<!-- <p>Seems you have stumbled upon the blog of Himanshu Dedge. I am a second year mechanical engineering student at the Georgia Institute of Technology (Geogria Tech).  </p> -->
+<!-- <p>Seems you have stumbled upon the blog of Himanshu Dedge. I am a second year mechanical engineering student at the Georgia Institute of Technology (Geogria Tech). 
+
+In high school two activites, engineering (primarialy robotics) and photography, grew into key aspects of my life. The <a target="_blank" href="http://www.usfirst.org/">FIRST Robotics</a> team at my high school allowed me to dive into engineering head first. I explored the electrical and computer science aspect of robotics before settlling on the mechanical part. In my four years on the team I developed my CAD, machining and mechanical design skills. 
+
+ </p> -->
 
 <!-- <a target="_blank" href="{{ site.baseurl }}/img/IMG_0816.png">
     <img src="{{ site.baseurl }}/img/IMG_0816.png" alt="Oh, shoot! Look's like you're missing out on the photo:(">
