Updates to blog and new home page

--- a/contact.html
+++ b/contact.html
@@ -12,4 +12,5 @@ header-img: "img/contact-bg.jpg"
 
 <h3>Address:</h3>
 <p>1 Darren Drive, Shrewsbury, MA 01545</p>
-<p></p>
+<p>or</p>
+<p>30538 Georgia Tech Station, Atlanta, GA 30332</p>
