--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@ description: "A showcase of my skills relating to photography and engineering"
 <a target="_blank" href="{{ site.baseurl }}/img/IMG_3252.png">
     <img src="{{ site.baseurl }}/img/IMG_3252.png" alt="Oh, shoot! Look's like you're missing out on the photo:(">
 </a>
-<span class="caption text-muted">Me at Ecomusée des Mines de Fer de Lorraine in France.</span>
+<span class="caption text-muted">Ecomusée des Mines de Fer de Lorraine in France.</span>
 
 <h2 class="section-heading">Introduction</h2>
 
-<p>I am a second year mechanical engineering student at the <a href="http://www.gatech.edu/" target="_blank">Georgia Insititue of Technology</a>. I created this website to showcase my two passions, photography and engineering. </p>
-<p>I was introduced to engineering freshman year of high school when I joined the <a target="_blank" href="http://www.usfirst.org/">FIRST Robotics</a> competiton team at the school. At Georgia Tech I am part of RoboJackets (the school's robotics club which is comprised of five competition teams) and I am also a Prototyping Instructor at the Georgia Tech Invention Studio (a student run maker-space). </p>
-<p>My interest in photography didn't become evident to me until very recently. Junior year of high school I just began taking more and more photos with the famly DSLR. My senior year of high school I took senior portraits for 20 of my classmates and I even did a shoot for an oboist who used the pictures for the fliers for her show! At college I wanted to continue practicing photography, so I started a photojournalistic blog called <a href="https://www.facebook.com/humansofgeorgiatech/">Humans of Georgia Tech</a>. I am the photogrpaher for this blog and I take portraits of the people on campus and share something about them.</p>
+<p>I am a third year mechanical engineering student at the <a href="http://www.gatech.edu/" target="_blank">Georgia Insititue of Technology</a> and the Director of Growth and Development at the <a href="http://inventionstudio.gatech.edu/" target="_blank">Georgia Tech Invention Studio</a>. In addition to engineering, my second passion is photography.</p>
+
+<p>I created this website to document the various research, class and personal projects. Some of my photoshoots are also avaliable on this website. </p>
+<p>This website is still in the process of being brought up to date. My projects blog has the photos documenting the build process, explanations to follow soon.</p>
 
 <!-- <p>Seems you have stumbled upon the blog of Himanshu Dedge. I am a second year mechanical engineering student at the Georgia Institute of Technology (Geogria Tech). 
 
